# scapy-ndn

./: .mailmap  COPYING.md  README.md  devlog.txt  ndn.py  pyproject.toml
examples/signed_interest/: send_route_add_interest.py  verify_interest.py
pcaps/: README.md  nfdc-route-add.pcap
src/scapyndn/: key_chain.py  pkt.py
src/scapyndn/contents/: nfd.py
src/tools/: README.md  nfd_status.py  nfdc.py  rcv_ndn.py  read_cert.py  read_ndn.py
test/: binding.uts  content.uts  fields.uts  interest.uts  lp.uts  name-comp.uts  name.uts  ndn.utsc  nfd.uts
test/pcaps/: README.md
tools/: nfd_status.py  rcv_ndn.py  read_cert.py  read_ndn.py
